--- a/jwt-typeorm/.eslintrc
+++ b/jwt-typeorm/.eslintrc
@@ -14,6 +14,9 @@
     "airbnb-typescript/base"
   ],
   "rules": {
-    "no-console": 2
+    "no-console": 2,
+    "lines-between-class-members": 0,
+    "@typescript-eslint/lines-between-class-members": 0,
+    "import/prefer-default-export": 0
   }
 }
