--- a/jwt-typeorm/package.json
+++ b/jwt-typeorm/package.json
@@ -18,6 +18,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "helmet": "^4.4.1",
+    "hpp": "^0.2.3",
     "jest": "^26.6.3",
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
@@ -31,6 +32,7 @@
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.11",
     "@types/helmet": "^4.0.0",
+    "@types/hpp": "^0.2.1",
     "@types/jest": "^26.0.20",
     "@types/jsonwebtoken": "^8.5.0",
     "@types/morgan": "^1.9.2",
