--- a/jwt-typeorm/tsconfig.json
+++ b/jwt-typeorm/tsconfig.json
@@ -10,7 +10,10 @@
 		"emitDecoratorMetadata": true,
 		"allowSyntheticDefaultImports": true,
 		"moduleResolution": "node",
-		"typeRoots": ["./node_modules/@types"]
+		"typeRoots": ["./node_modules/@types"],
+		"module": "commonjs",
+    "resolveJsonModule": true,
+    "esModuleInterop": true
 	},
 	"include": ["src/**/*.ts"],
 	"exclude": ["node_modules"]
