jwt-typeorm/user create and read by id endpoints, typeorm boilerplate

--- a/jwt-typeorm/.eslintrc
+++ b/jwt-typeorm/.eslintrc
@@ -16,7 +16,8 @@
   "rules": {
     "no-console": 2,
     "lines-between-class-members": 0,
+    "import/prefer-default-export": 0,
     "@typescript-eslint/lines-between-class-members": 0,
-    "import/prefer-default-export": 0
+    "@typescript-eslint/no-explicit-any": 0
   }
 }
