--- a/jwt-typeorm/package.json
+++ b/jwt-typeorm/package.json
@@ -13,6 +13,8 @@
   },
   "dependencies": {
     "bcrypt": "^5.0.1",
+    "class-transformer": "^0.4.0",
+    "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "cross-env": "^7.0.3",
     "dotenv": "^8.2.0",
@@ -22,12 +24,14 @@
     "jest": "^26.6.3",
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
+    "pg": "^8.5.1",
     "ts-jest": "^26.5.3",
     "ts-node": "^9.1.1",
     "typeorm": "^0.2.31",
     "typescript": "^4.2.3"
   },
   "devDependencies": {
+    "@types/cookie-parser": "^1.4.2",
     "@types/cors": "^2.8.10",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.11",
