--- a/jwt-typeorm/package.json
+++ b/jwt-typeorm/package.json
@@ -31,6 +31,7 @@
     "typescript": "^4.2.3"
   },
   "devDependencies": {
+    "@types/bcrypt": "^3.0.0",
     "@types/cookie-parser": "^1.4.2",
     "@types/cors": "^2.8.10",
     "@types/dotenv": "^8.2.0",
