Feature/Configure jest and ts-jest for testing

--- a/jwt-typeorm/.eslintrc
+++ b/jwt-typeorm/.eslintrc
@@ -4,6 +4,7 @@
   "parserOptions": {
     "project": "./tsconfig.json"
   },
+  "ignorePatterns": ["jest.config.js"],
   "plugins": [
     "@typescript-eslint"
   ],
