--- a/jwt-typeorm/package.json
+++ b/jwt-typeorm/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "start": "cross-env NODE_ENV=production ts-node --transpile-only src/server.ts",
     "dev": "cross-env NODE_ENV=development nodemon --watch src --delay 1 --exec 'ts-node' src/server.ts",
-    "test": "jest --forceExit --detectOpenHandles",
+    "test": "jest --detectOpenHandles",
     "lint": "eslint . --ext .ts"
   },
   "dependencies": {
@@ -21,11 +21,9 @@
     "express": "^4.17.1",
     "helmet": "^4.4.1",
     "hpp": "^0.2.3",
-    "jest": "^26.6.3",
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
     "pg": "^8.5.1",
-    "ts-jest": "^26.5.3",
     "ts-node": "^9.1.1",
     "typeorm": "^0.2.31",
     "typescript": "^4.2.3"
@@ -48,7 +46,9 @@
     "eslint": "^7.21.0",
     "eslint-import-resolver-typescript": "^2.4.0",
     "eslint-plugin-import": "^2.22.1",
+    "jest": "^26.6.3",
     "nodemon": "^2.0.7",
-    "sinon": "^9.2.4"
+    "sinon": "^9.2.4",
+    "ts-jest": "^26.5.3"
   }
 }
