--- a/jwt-typeorm/tsconfig.json
+++ b/jwt-typeorm/tsconfig.json
@@ -16,5 +16,5 @@
     "esModuleInterop": true
 	},
 	"include": ["src/**/*.ts"],
-	"exclude": ["node_modules"]
+	"exclude": ["node_modules", "jest.config.ts"]
 }
