--- a/jwt-typeorm/.eslintrc
+++ b/jwt-typeorm/.eslintrc
@@ -18,6 +18,7 @@
     "no-console": 2,
     "lines-between-class-members": 0,
     "import/prefer-default-export": 0,
+    "max-classes-per-file": 0,
     "@typescript-eslint/lines-between-class-members": 0,
     "@typescript-eslint/no-explicit-any": 0
   }
